# pushswap-research

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
src/: algo.rs  lib.rs  main.rs  optimizer.rs  reopt.rs  stack_pair.rs  stacks.rs
src/algo/: reverse.rs  sort_bfs.rs  sort_bubble.rs  sort_chunk.rs  sort_insert.rs  sort_insertion.rs  sort_k_chunk.rs  sort_merge.rs  sort_quick2.rs  sort_quick3.rs  sort_radix.rs  sort_selection.rs  sort_three.rs  sort_turk.rs  sort_turk3.rs  sort_turk_chunk.rs  sort_turk_lis.rs  sort_turk_lis2.rs  sort_turk_lis_chunk.rs  test_utils.rs  turk_common.rs
