[package]
name = "push_swap"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { version = "0.10", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
rand = "0.10"

[features]
default = []
superopt = ["dep:rand", "dep:serde", "dep:serde_json"]

[[bin]]
name = "superopt"
path = "src/bin/superopt.rs"
required-features = ["superopt"]
